# goat-desktop

./: .gitignore  AGENTS.md  CLAUDE-CONTEXT.md  RADAR.md  README.md  SESSION-LOG.md  STATE.md  pyproject.toml  requirements.txt
.specify/: .app-goal.md  .recovery-scan.md
contracts/: GOAT-LIVE-001.json  GOAT-LIVE-002.json  GOAT-PACKAGE-001.json  GOAT-RECOVERY-001.json  SCAN-001.json
docs/: AICOS-REFERENCES.md  GOAT-DESKTOP-VISION.md  goat-desktop-recovery-plan-2026-05-29.md  goat-live-001-controlled-proof-2026-05-29.md  maya-chat-builder-smoke-2026-05-17.md  run-0a-truth-report-2026-05-16.md  run-0b-ufo2-spike-2026-05-16.md  run-0c-coordinate-broker-spike-2026-05-17.md  run-b-acceptance-report-2026-05-17.md  run-b-code-ready-report-2026-05-17.md  run-c-acceptance-report-2026-05-17.md  run-c-completion-report-2026-05-17.md  run-d-completion-report-2026-05-17.md  run-e-code-ready-report-2026-05-17.md  run-e-completion-report-2026-05-17.md  run-f-code-ready-report-2026-05-17.md  run-f-completion-report-2026-05-17.md  run-f-completion-report-2026-05-18.md  run-f-final-acceptance-2026-05-17.json  run-f-final-live-acceptance-2026-05-17.json  run-f-final-live-attempt-report-2026-05-17.md  run-f-live-microphone-acceptance-2026-05-17.json  run-f-live-microphone-attempt-report-2026-05-17.md  run-f-stt-builder-proxy-code-ready-report-2026-05-17.md  run-f-stt-builder-smoke-2026-05-17.json  run-f-stt-builder-smoke-report-2026-05-17.md  run-f-windows-audio-probe-2026-05-17.json  run-f-windows-audio-probe-report-2026-05-17.md  run-f2-builder-tts-code-ready-report-2026-05-17.md  (+25 more)
(+54 files in other folders)
