[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goat-desktop"
version = "0.1.0"
description = "GOAT Desktop native Windows shell"
requires-python = ">=3.12"
dependencies = [
  "PyQt6>=6.7,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
goat_desktop = ["assets/*"]

