[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goat-desktop"
version = "0.1.0"
description = "GOAT Desktop native Windows shell"
requires-python = ">=3.12"
dependencies = [
  "PyQt6>=6.7,<7",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "mss>=9,<11",
  "pillow>=10,<12",
  "pywinauto>=0.6.8,<1",
  "websockets>=15,<17",
]

[project.scripts]
goat-desktop = "goat_desktop.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
goat_desktop = ["assets/*"]
